# gale

./: .gitignore  CMakeLists.txt  keymap.py  main.c  run.sh  terminal.c  types.h
src/: main.c
src/bufferstuff/: CMakeLists.txt  buffer_mods.c  buffer_ops.c  buffer_ops.h  buffer_pos.c  translations.c  utils.c  utils.h
src/includes/: common_keymap.h  types.h
src/keymap/: CMakeLists.txt  fsm.c  fsm_state.c  generator.py  impl.c  keymap_api.h
src/terminal/: CMakeLists.txt  status_bar.c  terminal.c  terminal.h
